# ethdubai-2023-hackathon

./: .gitignore  .gitmodules  README.md  docker-compose.yml  pyproject.toml
env/: README.md
forge/: foundry.toml
forge/src/: SushiAdapter.sol
frontend/: README.md  package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/lib/components/: Button.svelte  Footer.svelte  Header.svelte  Logo.svelte  PeformanceChart.svelte  PerformanceChart.svelte  index.ts
frontend/src/lib/helpers/: formatters.ts
frontend/src/routes/: +layout.svelte  +page.svelte  AboutStrategy.svelte  Backtest.svelte  InvestWidget.svelte  PerformanceMetrics.svelte
hackathon/: conf.py  deploy.py  deposit.py  logs.py  rebalance.py  trade.py
notebook/: ethdubai-hackathon.ipynb  sushi-polygon-ema.ipynb
strategy/: ethdubai-hackathon.py  sushi-polygon-ema.py
