[tool.poetry]
name = "ethdubai-2023-hackathon"
version = "0.1.0"
description = ""
authors = ["Mikko Ohtamaa <mikko@opensourcehacker.com>"]
readme = "README.md"
packages = [{include = "hackathon"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
trade-executor = {path = "trade-executor", develop = true, extras=["data", "execution", "web-server"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
